--- a/hw/hw_02.md
+++ b/hw/hw_02.md
@@ -3,19 +3,128 @@
 2. открыть вторую консоль и также зайти по ssh на ту же ВМ (можно в докере 2 сеанса)
 3. запустить везде psql из под пользователя postgres
 4. сделать в первой сессии новую таблицу и наполнить ее данными
+```sql
+CREATE SCHEMA test;
+CREATE TABLE test.hw2 (id int);
+INSERT INTO test.hw2 SELECT s.id FROM generate_series(1,5) AS s(id); 
+```
 5. посмотреть текущий уровень изоляции:
+```sql
+show transaction isolation level;
+```
 6. начать новую транзакцию в обеих сессиях с дефолтным (не меняя) уровнем изоляции
 7. в первой сессии добавить новую запись
 8. сделать запрос на выбор всех записей во второй сессии
-9. видите ли вы новую запись и если да то почему? После задания можете сверить правильный ответ с эталонным (будет доступен после 3 лекции)
+```sql
+-- terminal 1
+thai=# BEGIN;
+BEGIN
+thai=*# SELECT * FROM test.hw2;
+
+-- terminal 2
+BEGIN;
+
+-- terminal 1
+thai=*# INSERT INTO test.hw2 VALUES (1000);
+INSERT 0 1
+thai=*# SELECT * FROM test.hw2;
+  id  
+------
+    1
+    2
+    3
+    4
+    5
+ 1000
+(6 rows)
+
+-- terminal 2
+thai=*# SELECT * FROM test.hw2 ;
+ id 
+----
+  1
+  2
+  3
+  4
+  5
+(5 rows)
+```
+9.  видите ли вы новую запись и если да то почему? После задания можете сверить правильный ответ с эталонным (будет доступен после 3 лекции)
+    
+    Получаем аномалию не-повторяющегося чтения - вроде транзакция та же (в том плане что не закрывалась), а значение изменилось. Поэтому новая запись видна
 10. завершить транзакцию в первом окне
 11. сделать запрос на выбор всех записей второй сессии
 12. видите ли вы новую запись и если да то почему?
+    
+    Смотря как завершить транзакцию: `COMMIT;` - увидим, `ROLLBACK;` - нет . 
 13. завершите транзакцию во второй сессии
 14. начать новые транзакции, но уже на уровне repeatable read в ОБЕИХ сессиях
+```sql
+-- terminal 1
+thai=# BEGIN;
+BEGIN
+thai=*# set transaction isolation level repeatable read;
+SET
+thai=*# show transaction isolation level;
+ transaction_isolation 
+-----------------------
+ repeatable read
+(1 row)
+
+-- terminal 2
+BEGIN;
+set transaction isolation level repeatable read;
+```
 15. в первой сессии добавить новую запись
 16. сделать запрос на выбор всех записей во второй сессии
 17. видите ли вы новую запись и если да то почему?
+```sql
+-- terminal 1
+thai=*# INSERT INTO test.hw2 VALUES (2000);
+INSERT 0 1
+thai=*# SELECT * FROM test.hw2 ;
+  id  
+------
+    1
+    2
+    3
+    4
+    5
+ 1000
+ 2000
+(7 rows)
+
+-- terminal 2
+thai=*# SELECT * FROM test.hw2 ;
+  id  
+------
+    1
+    2
+    3
+    4
+    5
+ 1000
+(6 rows)
+
+-- Изменений мы не увидим. То есть мы подняли уровень изоляции и теперь мы работаем со снимком данных (мы не видим никаких изменений - мы видим старое)
+```
 18. завершить транзакцию в первом окне
 19. сделать запрос во выбор всех записей второй сессии
 20. видите ли вы новую запись и если да то почему?
+```sql
+-- terminal 1
+COMMIT;
+
+-- terminal 2
+thai=*# SELECT * FROM test.hw2 ;
+  id  
+------
+    1
+    2
+    3
+    4
+    5
+ 1000
+(6 rows)
+```
+Изменений мы не увидим. То есть мы подняли уровень изоляции и теперь мы работаем со снимком данных (мы не видим никаких изменений - мы видим старое)
